# MUSNGR

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  netlify.toml  package-lock.json
backend-main/: Cargo.toml  README.md  index.js  package-lock.json  package.json
backend-main/src/: app.rs  auth.rs  config.rs  error.rs  ffmpeg.rs  ffprobe.rs  main.rs  util.rs
frontend-main/: .eslintrc.json  EMAIL_SETUP.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend-main/src/app/: globals.css  layout.tsx
frontend-main/src/app/(auth)/: layout.tsx
frontend-main/src/app/(internals)/: layout.tsx
frontend-main/src/app/(marketing)/: layout.tsx  page.tsx
frontend-main/src/app/dashboard/: layout.tsx  page.tsx
frontend-main/src/app/settings/: layout.tsx  page.tsx
frontend-main/src/components/: SessionProviderWrapper.tsx  mobile-toggle.tsx  page-header.tsx  pricing-cards.tsx  providers.tsx  shell.tsx  theme-toggle.tsx  video-success-modal.tsx
frontend-main/src/components/animations/: animation-container.tsx
frontend-main/src/components/auth/: signin-form.tsx  signup-form.tsx
frontend-main/src/components/constants/: constants.ts
frontend-main/src/config/: site.ts  youtube.ts
frontend-main/src/hooks/: use-video-options.ts
frontend-main/src/lib/: auth.ts  background-generator.ts  email.ts  id3-extractor.ts  notification-preferences.ts  video-creator.ts
frontend-main/src/services/: youtube.ts
frontend-main/src/types/: index.d.ts  next-auth.d.ts  video-options.ts
(+47 files in other folders)
