[package]
name = "musngr-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart", "ws", "macros"] }
axum-extra = { version = "0.9.4", features = ["typed-header", "cookie"] }
base64 = "0.22.1"
color-eyre = "0.6.3"
ed25519-compact = "2.1.1"
futures-util = "0.3.30"
hex = "0.4.3"
humansize = "2.1.3"
image = "0.25.2"
jwt-simple = { version = "0.12.10", default-features = false, features = [
  "pure-rust",
] }
mime_guess = "2.0.5"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = [
  "rustls-tls-native-roots",
  "http2",
  "charset",
  "stream",
  "multipart",
  "json",
], default-features = false }
scc = "2.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
toml = "0.8.19"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = { version = "1.1.3", features = ["serde"] }
url = { version = "2.5.2", features = ["serde"] }
which = "6.0.3"
